@@ -3,6 +3,7 @@ Version 2.5.18dev:
 * Changed A4000 default floppy drive type to 3.5" HD.
 * New option cdfs (boolean). Can be used to disable builtin CDFS.
 * Reduced number of OpenAL buffers to pre-2.5.17dev level.
+* Updated emulation core from WinUAE 2900b18.
 
 Version 2.5.17dev:
 
